--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -20,43 +20,70 @@ body {
   // background-color: alpha(var(--color-primary), 1);
   background: $color-white;
   font-size: rem(16px);
-  font-family: $primary-font;
+  font-family: $font-montserrat;
   color: $primary-color;
+  font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  @include media-breakpoint-up(md) {
+    font-size: rem(20px);
+  }
 }
 
 //  Typography
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   color: $primary-color;
-  font-weight: bold;
+  font-weight: 600;
   text-decoration: none;
   margin: 0 0 15px 0;
+  font-family: $font-cormorant;
+  position: relative;
 }
 .h1, h1 {
-  font-size: rem(21px);
-  line-height: 1.05;
+  font-size: rem(30px);
+  line-height: 1.2;
   letter-spacing: -1px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
+  &>span {
+    position: relative;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: rem(36px);
+  }
 }
 .h2, h2 {
-  font-size: rem(18px);
-  line-height: 1.14;
+  font-size: rem(30px);
+  line-height: 1.2;
   margin-bottom: 20px;
+  @include media-breakpoint-up(md) {
+    font-size: rem(36px);
+  }
 }
 .h3, h3 {
   font-size: rem(16px);
-  line-height: 1.38;
+  line-height: 1.3;
+  @include media-breakpoint-up(md) {
+    font-size: rem(20px);
+  }
 }
 .h4, h4 {
   font-size: rem(14px);
   line-height: 1.38;
+  @include media-breakpoint-up(md) {
+    font-size: rem(16px);
+  }
 }
 .h5, h5 {
   font-size: rem(13px);
+  @include media-breakpoint-up(md) {
+    font-size: rem(15px);
+  }
 }
 .h6, h6 {
   font-size: rem(12px);
+  @include media-breakpoint-up(md) {
+    font-size: rem(14px);
+  }
 }
 
 small, .small {
@@ -65,7 +92,7 @@ small, .small {
 }
 
 p {
-  line-height: 22px;
+  line-height: 1.25;
   margin: 0 0 20px 0;
 }
 
@@ -115,7 +142,7 @@ img, .img {
   // width: 1280px;
   width: 100%;
   min-width: 320px;
-  padding: 0 15px;
+  // padding: 0 10px;
 }
 
 /* text align */
