--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -1,1 +1,145 @@
 /* modules */
+.breadcrumb {
+  padding: 0;
+  background: none;
+  font-size: rem(16px);
+  margin-bottom: 37px;
+  font-family: $font-montserrat;
+  &-item {
+    a, span {
+      line-height: 2.5;
+      display: inline-block;
+      text-decoration: none;
+    }
+    a {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+    &::before {
+      line-height: 2.5;
+    }
+    &.active {
+      color: $primary-color;
+    }
+    &+.breadcrumb-item {
+      padding-left: 5px;
+      &::before {
+        color: $primary-color;
+        padding-right: 5px;
+      }
+    }
+  }
+  @include media-breakpoint-up(md) {
+    font-size: rem(18px);
+    margin-bottom: 34px;
+  }
+  @include media-breakpoint-up(xl) {
+    margin-bottom: 25px;
+  }
+}
+
+.content {
+  padding-top: 37px;
+  padding-bottom: 50px;
+  &__document {
+    h2, .h2, h3, .h3 {
+      display: inline-block;
+      &::before {
+        height: 14px;
+        background-color: $add-color;
+        position: absolute;
+        left: 0;
+        top: 12px;
+        content: '';
+        width: 82%;
+        z-index: -1;
+      }
+    }
+    h2, .h2 {
+      &::before {
+        @include media-breakpoint-up(md) {
+          width: 118%;
+          top: 18px;
+          left: 5%;
+        }
+      }
+    }
+    h3, .h3 {
+      &::before {
+        width: auto;
+        min-width: 193px;
+        top: 3px;
+        @include media-breakpoint-up(md) {
+          min-width: 303px;
+          top: 6px;
+        }
+      }
+    }
+    &-thumb {
+      padding: 0 33px 30px 14px;
+      position: relative;
+      margin-bottom: 20px;
+      img {
+        background: #C4C4C4;
+        box-shadow: 0px 4px 4px rgba(199, 160, 133, 0.2);
+        position: relative;
+        z-index: 5;
+        width: 100%;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 26px;
+        background-color: $add-color;
+      }
+      @include media-breakpoint-up(md) {
+        padding: 0 25px 34px 11px;
+        width: 350px;
+        flex-shrink: 0;
+        margin-right: 20px;
+        margin-bottom: 0;
+        &::before {
+          top: 11px;
+        }
+      }
+      @include media-breakpoint-up(xl) {
+        padding: 0 30px 40px 13px;
+        width: 412px;
+        flex-shrink: 0;
+        &::before {
+          top: 12px;
+        }
+      }
+    }
+    &-head {
+      @include media-breakpoint-up(md) {
+        display: flex;
+        margin-bottom: 33px;
+        .h1, h1 {
+          font-size: rem(45px);
+          margin-bottom: 0;
+        }
+      }
+      @include media-breakpoint-up(xl) {
+        .h1, h1 {
+          font-size: rem(64px);
+        }
+      }
+    }
+  }
+  &__btn {
+    width: 100%;
+    display: block;
+    @include media-breakpoint-up(md) {
+      max-width: 350px;
+      margin: 0 auto;
+    }
+    @include media-breakpoint-up(xl) {
+      max-width: 305px;
+    }
+  }
+}
