--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -1,2 +1,95 @@
 /* fonts */
 // google webfont https://google-webfonts-helper.herokuapp.com/fonts
+
+/* montserrat-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-500 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Medium'), local('Montserrat-Medium'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-700 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Bold'), local('Montserrat-Bold'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-800 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
+/* cormorant-unicase-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Cormorant Unicase';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local('Cormorant Unicase Regular'), local('CormorantUnicase-Regular'),
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.svg#CormorantUnicase') format('svg'); /* Legacy iOS */
+}
+/* cormorant-unicase-600 - latin_cyrillic */
+@font-face {
+  font-family: 'Cormorant Unicase';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.eot'); /* IE9 Compat Modes */
+  src: local('Cormorant Unicase SemiBold'), local('CormorantUnicase-SemiBold'),
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.svg#CormorantUnicase') format('svg'); /* Legacy iOS */
+}
+/* cormorant-unicase-700 - latin_cyrillic */
+@font-face {
+  font-family: 'Cormorant Unicase';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local('Cormorant Unicase Bold'), local('CormorantUnicase-Bold'),
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.svg#CormorantUnicase') format('svg'); /* Legacy iOS */
+}
