--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -3,3 +3,27 @@
 //-     div
 //-     div
 //-     div
+
+mixin ulFolder
+  ul.ul-folder
+    li.has-folder
+      a(href="#!") Микроблейдинг
+      i.icon-arrow-down
+      ul.ul-folder
+        li: a(href="#!") Татуаж бровей
+        li: a(href="#!") Татуаж губ
+        li: a(href="#!") Татуаж век
+    li.has-folder
+      a(href="#!") Татуаж
+      i.icon-arrow-down
+      ul.ul-folder
+        li: a(href="#!") Татуаж бровей
+        li: a(href="#!") Татуаж губ
+        li: a(href="#!") Татуаж век
+    li.has-folder
+      a(href="#!") Удаление татуажа
+      i.icon-arrow-down
+      ul.ul-folder
+        li: a(href="#!") Татуаж бровей
+        li: a(href="#!") Татуаж губ
+        li: a(href="#!") Татуаж век
