--- a/_gulp/_pug/_include/_footer.pug
+++ b/_gulp/_pug/_include/_footer.pug
@@ -2,5 +2,35 @@
 footer.footer
   .container
     
-    div &copy; 2018
+    .footer__wrapper
+      .footer__logo
+        img(src="./images/footer-logo.png", alt="").img-fluid
+      .footer__navigation
+        div
+          ul
+            li: a(href="#!") О нас
+            li: a(href="#!") Наш салон
+            li: a(href="#!") Все услуги
+            li: a(href="#!") Наша команда
+        div
+          ul
+            li: a(href="#!") Новости
+            li: a(href="#!") Статьи
+            li: a(href="#!") Задать вопрос
+            li: a(href="#!") Вакансии
+      .footer__center
+        .footer__social
+          a(href="#!")
+            img(src="./images/icon-social-1.svg", alt="")
+          a(href="#!")
+            img(src="./images/icon-social-2.svg", alt="")
+          a(href="#!")
+            img(src="./images/icon-social-3.svg", alt="")
+          a(href="#!")
+            img(src="./images/icon-social-4.svg", alt="")
+        .footer__phones
+          a(href="tel:") 8 (499) 189-81-28
+          a(href="tel:") 8 (499) 189-73-88
+
+
   
