--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -125,7 +125,7 @@ html(lang="ru")
               a(href="#!").btn.content__btn Другие новости
 
     include ./_include/_footer
-    div(style="height: 1000px; background-color: #000")
+    //- div(style="height: 1000px; background-color: #000")
 
     // Load Scripts
     include ./_include/_footer-js
