--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -1,4 +1,61 @@
 /* header */
 .header {
-  background-color: $color-gray;
+  background-color: $color-white;
+  padding-top: 15px;
+  &__social {
+    text-align: center;
+    margin-bottom: 5px;
+    font-size: 0;
+    img {
+      width: 45px;
+      height: 45px;
+      display: block;
+    }
+    a {
+      display: inline-block;
+      margin: 0 6px;
+    }
+  }
+  &__center {
+    display: flex;
+    align-items: center;
+    max-width: 320px;
+    margin: 0 auto 18px;
+  }
+  &__logo {
+    flex-shrink: 0;
+    img {
+      width: 104px;
+    }
+  }
+  &__address {
+    width: calc(100% - 104px);
+    padding-left: 10px;
+    font-size: rem(13px);
+    flex-grow: 1;
+    p {
+      margin-bottom: 0;
+    }
+  }
+  &__bottom {
+    display: flex;
+    align-items: center;
+  }
+  @include media-breakpoint-up(sm) {
+    &__logo {
+      img {
+        width: 214px;
+      }
+    }
+    &__address {
+      width: calc(100% - 214px);
+      font-size: rem(16px);
+      p {
+        line-height: 1.5;
+      }
+    }
+    &__center {
+      max-width: inherit;
+    }
+  }
 }
