--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -28,6 +28,9 @@ body {
   @include media-breakpoint-up(md) {
     font-size: rem(20px);
   }
+  &.is-fixed {
+    overflow: hidden;
+  }
 }
 
 //  Typography
