--- a/_gulp/_scss/2-layout/_buttons.scss
+++ b/_gulp/_scss/2-layout/_buttons.scss
@@ -20,7 +20,48 @@ button {
   box-shadow: 1px 4px 5px rgba($color-black,.1);
   transition: all 0.35s;
   &:hover {
-    text-decoration: none;
-    box-shadow: 1px 4px 8px rgba($color-black,.2);
+    background: #ECCFB9;
+    box-shadow: inset 0px 7px 6px rgba($color-black,.1);
+  }
+}
+
+.btn-mobile {
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
+  background: $add-color;
+  padding: 0;
+  border: 0;
+  flex-shrink: 0;
+  box-shadow: 2px 4px 4px rgba($color-black,.1);
+  margin-left: 25px;
+  span {
+    position: relative;
+    width: 29px;
+    height: 4px;
+    background: $color-white;
+    display: inline-block;
+    vertical-align: middle;
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      background: $color-white;
+      left: 0;
+    }
+    &::before {
+      top: -8px;
+    }
+    &::after {
+      top: 8px;
+    }
+  }
+  @include media-breakpoint-up(md) {
+    margin-left: 58px;
+  }
+  @include media-breakpoint-up(xl) {
+    margin: 0;
+    display: none;
   }
 }
