--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -1,7 +1,18 @@
 /* header */
 .header {
   background-color: $color-white;
+  box-shadow: 0px 0px 0px rgba($color-black,0);
   padding-top: 15px;
+  padding-bottom: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  // transition: all 0.35s;
+  &-holder {
+    height: 218px;
+  }
   &__social {
     text-align: center;
     margin-bottom: 5px;
@@ -41,7 +52,50 @@
     display: flex;
     align-items: center;
   }
+  &__btn {
+    height: 40px;
+    line-height: 40px;
+    box-shadow: 1px 4px 5px rgba($color-black,.1);
+    font-size: rem(18px);
+    display: none;
+    width: 211px;
+  }
+  &__phones {
+    flex-shrink: 0;
+    flex-grow: 1;
+    font-size: rem(16px);
+    a {
+      text-decoration: none;
+    }
+  }
+  &.is-scroll {
+    position: fixed;
+    box-shadow: 0px 4px 10px rgba($color-black,.25);
+    padding-top: 14px;
+    padding-bottom: 14px;
+    .header {
+      &__social, &__address {
+        display: none;
+      }
+      &__logo {
+        position: absolute;
+        top: 4px;
+        img {
+          width: 170px;
+        }
+      }
+      &__center {
+        margin-bottom: 0;
+        max-width: inherit;
+      }
+      &__phones {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+  }
   @include media-breakpoint-up(sm) {
+    padding-bottom: 50px;
     &__logo {
       img {
         width: 214px;
@@ -56,6 +110,176 @@
     }
     &__center {
       max-width: inherit;
+      margin-bottom: 5px;
+    }
+    &__btn {
+      display: block;
+    }
+    &-holder {
+      height: 289px;
+    }
+    &.is-scroll {
+      .header {
+        &__btn {
+          display: none;
+        }
+        &__phones {
+          opacity: 1;
+          visibility: visible;
+          font-size: rem(20px);
+          padding-left: 195px;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-up(md) {
+    padding-top: 20px;
+    &__logo {
+      img {
+        width: 170px;
+      }
+    }
+    &__wrapper {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &__bottom {
+      width: 100%;
+      order: 3;
+    }
+    &__social {
+      white-space: nowrap;
+      width: 212px;
+      order: 2;
+      padding-top: 16px;
+      margin-bottom: 0;
+      a {
+        width: 44px;
+        height: 44px;
+        &:first-child {
+          margin-left: 0;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+    &__center {
+      width: calc(100% - 212px);
+      order: 1;
+      margin-bottom: 10px;
+    }
+    &__address {
+      padding-left: 20px;
+    }
+    &__phones {
+      font-size: rem(20px);
+      display: flex;
+      &>div {
+        &+div {
+          margin-left: 20px;
+        }
+      }
+    }
+    &-holder {
+      height: 228px;
+    }
+    &.is-scroll {
+      .header {
+        &__logo {
+          margin-left: -116px;
+        }
+        &__phones {
+          padding-left: 225px;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-up(md) {
+    &__address {
+      p {
+        max-width: 75%;
+      }
+    }
+    &.is-scroll {
+      .header {
+        &__phones {
+          padding-left: 335px;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-up(xl) {
+    padding-top: 40px;
+    padding-bottom: 0;
+    position: fixed;
+    transition: all 0.35s;
+    &__wrapper {
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-bottom: 36px;
+    }
+    &__logo {
+      img {
+        max-width: 166px;
+      }
+    }
+    &__btn {
+      height: 60px;
+      line-height: 60px;
+      margin-left: 20px;
+      flex-shrink: 0;
+    }
+    &__phones {
+      flex-direction: column;
+      text-align: right;
+      flex-grow: 0;
+      flex-shrink: 0;
+      margin-left: 60px;
+      &>div {
+        &+div {
+          margin-left: 0;
+        }
+      }
+    }
+    &__social {
+      padding-top: 0;
+    }
+    &__bottom, &__center {
+      width: auto;
+    }
+    &__bottom {
+      flex-shrink: 0;
+    }
+    &__address {
+      width: auto;
+      padding-left: 50px;
+    }
+    &__center {
+      margin: 0;
+    }
+    &-holder {
+      height: 272px;
+    }
+    &.is-scroll {
+      padding-top: 24px;
+      padding-bottom: 0;
+      .header {
+        &__logo {
+          position: relative;
+          top: auto;
+          margin: 0;
+          img {
+            width: 166px;
+          }
+        }
+        &__address, &__social, &__btn {
+          display: block;
+        }
+        &__phones {
+          padding-left: 0;
+        }
+      }
     }
   }
 }
