--- a/_gulp/_pug/_include/_header.pug
+++ b/_gulp/_pug/_include/_header.pug
@@ -30,26 +30,28 @@ header.header
     
   .navigation
     button(type="button").navigation__close
+      span
     .navigation__wrapper
-      nav
-        ul
-          li: a(href="#!") list
-          li: a(href="#!") list
-      .navigation__contacts
-        .navigation__social
-          a(href="#!")
-            img(src="./images/icon-social-1.svg", alt="")
-          a(href="#!")
-            img(src="./images/icon-social-2.svg", alt="")
-          a(href="#!")
-            img(src="./images/icon-social-3.svg", alt="")
-          a(href="#!")
-            img(src="./images/icon-social-4.svg", alt="")
-        .navigation__phones
-          div
-            a(href="tel:") +7 499 189-73-88
-          div
-            a(href="tel:") +7 499 189-81-22
-        button(type="button").btn.navigation__btn заказать звонок
+      .container
+        nav
+          ul
+            li: a(href="#!") list
+            li: a(href="#!") list
+        .navigation__contacts
+          .navigation__social
+            a(href="#!")
+              img(src="./images/icon-social-1.svg", alt="")
+            a(href="#!")
+              img(src="./images/icon-social-2.svg", alt="")
+            a(href="#!")
+              img(src="./images/icon-social-3.svg", alt="")
+            a(href="#!")
+              img(src="./images/icon-social-4.svg", alt="")
+          .navigation__phones
+            div
+              a(href="tel:") +7 499 189-73-88
+            div
+              a(href="tel:") +7 499 189-81-22
+          button(type="button").btn.navigation__btn заказать звонок
 
 .header-holder
