--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -27,3 +27,7 @@ mixin ulFolder
         li: a(href="#!") Татуаж бровей
         li: a(href="#!") Татуаж губ
         li: a(href="#!") Татуаж век
+
+#modal.modal.mfp-hide
+  .modal__wrapper
+    p test
