--- a/_gulp/_scss/1-base/_variables.scss
+++ b/_gulp/_scss/1-base/_variables.scss
@@ -20,3 +20,4 @@ $primary-font: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 
 $font-montserrat: 'Montserrat', $primary-font;
 $font-cormorant: 'Cormorant Unicase', $primary-font;
+$font-icomoon: 'icomoon';
