--- a/_gulp/_pug/_include/_head.pug
+++ b/_gulp/_pug/_include/_head.pug
@@ -35,6 +35,6 @@ head
 
   //- link(rel='stylesheet', href='css/fonts.min.css')
   link(rel='stylesheet', href='./js/libs/magnific-popup/magnific-popup.css')
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/271f783587/visavi/style.css">
+  link(rel='stylesheet' href='https://i.icomoon.io/public/temp/9e316a3b48/visavi/style.css')
   link(rel='stylesheet', href='./css/style.min.css')
   
