--- a/_gulp/_scss/2-layout/_buttons.scss
+++ b/_gulp/_scss/2-layout/_buttons.scss
@@ -35,27 +35,15 @@ button {
   flex-shrink: 0;
   box-shadow: 2px 4px 4px rgba($color-black,.1);
   margin-left: 25px;
-  span {
-    position: relative;
-    width: 29px;
-    height: 4px;
-    background: $color-white;
+  position: relative;
+  &::before {
+    font-size: rem(30px);
+    font-family: $font-icomoon;
+    color: $color-white;
+    content: '\e902';
     display: inline-block;
     vertical-align: middle;
-    &::before, &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 4px;
-      background: $color-white;
-      left: 0;
-    }
-    &::before {
-      top: -8px;
-    }
-    &::after {
-      top: 8px;
-    }
+    line-height: 1;
   }
   @include media-breakpoint-up(md) {
     margin-left: 58px;
