--- a/_gulp/_scss/1-base/_variables.scss
+++ b/_gulp/_scss/1-base/_variables.scss
@@ -16,6 +16,10 @@ $color-black: #000000;
 $color-red: red;
 $color-pink: pink;
 
+$color-s-1: #fe4261;
+$color-s-2: #9b51e0;
+$color-s-3: #2a6ca6;
+
 $primary-font: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 
 $font-montserrat: 'Montserrat', $primary-font;
