--- a/_gulp/_pug/_include/_footer-js.pug
+++ b/_gulp/_pug/_include/_footer-js.pug
@@ -2,3 +2,4 @@
 script(src="./js/libs/jquery/jquery-3.3.1.min.js")
 script(src="./js/libs/jquery/jquery-migrate-3.0.1.min.js")
 script(src="./js/libs/magnific-popup/jquery.magnific-popup.min.js")
+script(src="./js/libs/jquery.maskedinput/jquery.maskedinput.min.js")
