--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -4,6 +4,101 @@
 //-     div
 //-     div
 
+//- Все примеси в этом файле должны начинаться c имени блока (field-text)
+mixin field-text(props)
+  //- Принимает:
+  //-   props {
+  //-     title: ''         {string} - текст с названием (выводится над полем)
+  //-     hasJs: false      {bool}   - используется js или нет
+  //-     isTextarea: false {bool}   - флаг input/textarea
+  //-     hasError: false   {bool}   - показаль ошибку или нет
+  //-     helpText: ''      {string} - пояснение под полем
+  //-     mods: ''          {string} - модификаторы блока
+  //-     val: ''           {string} - текст в поле
+  //-     attrs:            {object} - любые атрибуты для input/textarea
+  //-       type:           {string}
+  //-       placeholder:    {string}
+  //- Вызов:
+        +field-text({
+          title: 'Заголовок',
+          hasJs: true,
+          isTextarea: false,
+          hasError: false,
+          helpText: 'Текст ошибки или подсказка',
+          mods: '',
+          val: '',
+          attrs: {
+            name: 'text',
+            placeholder: ''
+          }
+        })
+  -
+    if(typeof(props) === 'undefined') {
+      var props = {};
+    }
+    var allMods = '';
+    if(typeof(props.mods) !== 'undefined' && props.mods) {
+      var modsList = props.mods.split(',');
+      for (var i = 0; i < modsList.length; i++) {
+        allMods = allMods + ' field-text--' + modsList[i].trim();
+      }
+    }
+  label.field-text(class=allMods, class=(typeof(props.hasError) !== 'undefined' && props.hasError) ? 'has-error' : '', class=(typeof(props.hasJs) !== 'undefined' && props.hasJs) ? 'j-field-text' : '')&attributes(attributes)
+    if(typeof(props.title) !== 'undefined' && props.title)
+      span.field-text__name(class=(typeof(props.hasJs) !== 'undefined' && props.hasJs) ? 'css-label' : '')!= props.title
+        sup *
+    span.field-text__input-wrap
+      if(typeof(props.isTextarea) !== 'undefined' && props.isTextarea)
+        textarea.field-text__input(class=(typeof(props.hasJs) !== 'undefined' && props.hasJs) ? 'css-input' : '')&attributes(props.attrs)= props.val
+      else
+        input.field-text__input(class=(typeof(props.hasJs) !== 'undefined' && props.hasJs) ? 'css-input' : '', type=(typeof(props.attrs) !== 'undefined' && props.attrs.type) ? props.attrs.type : 'text', value=props.val)&attributes(props.attrs)
+      if(typeof(props.helpText) !== 'undefined' && props.helpText)
+        span.field-text__help-text!= props.helpText
+      block
+
+//- Все примеси в этом файле должны начинаться c имени блока (field-checkbox)
+mixin field-checkbox(props)
+  //- Принимает:
+  //-   props {
+  //-     title: ''         {string} - текст рядом с чекбокскнопкой
+  //-     isLink: false     {bool}   - является ли блок ссылкой
+  //-     mods: ''          {string} - модификаторы обертки чекбокскнопки
+  //-     attrs:            {object} - любые атрибуты для input
+  //-       name:           {string}
+  //-       checked:        {bool}
+  //- Вызов:
+        +field-checkbox({
+          title: 'Чекбокскнопка',
+          isLink: false,
+          mods: '',
+          attrs: {
+            name: 'checkbox',
+            checked: true,
+          }
+        })
+  -
+    if(typeof(props) === 'undefined') {
+      var props = {};
+    }
+    var allMods = '';
+    if(typeof(props.mods) !== 'undefined' && props.mods) {
+      var modsList = props.mods.split(',');
+      for (var i = 0; i < modsList.length; i++) {
+        allMods = allMods + ' field-checkbox--' + modsList[i].trim();
+      }
+    }
+  if(typeof(props.isLink) !== 'undefined' && props.isLink)
+    a.field-checkbox.j-checked(class=allMods, class=(typeof(props.attrs.checked) !== 'undefined' && props.attrs.checked) ? 'checked' : '', class=(typeof(props.attrs.disabled) !== 'undefined' && props.attrs.disabled) ? 'disabled' : '', href="javascript:void(0)")&attributes(attributes)
+      span.field-checkbox__span-input
+      span.field-checkbox__label!= props.title
+      block
+  else
+    label.field-checkbox(class=allMods)&attributes(attributes)
+      input.field-checkbox__input(type="checkbox", name=(typeof(props.attrs.name) !== 'undefined' && props.attrs.name) ? props.attrs.name : 'checkbox')&attributes(props.attrs)
+      span.field-checkbox__span-input
+      span.field-checkbox__label!= props.title
+      block
+
 mixin ulFolder
   ul.ul-folder
     li.has-folder
@@ -30,4 +125,58 @@ mixin ulFolder
 
 #modal.modal.mfp-hide
   .modal__wrapper
-    p test
+    button(type="button").modal__close
+    .modal__content
+      .modal__head
+        span.d-sm-none Обратный звонок
+        span.d-none.d-sm-inline-block Заказать обратный звонок
+      form(action="#")
+        .form-group
+          +field-text({
+            title: '',
+            hasJs: false,
+            isTextarea: false,
+            hasError: false,
+            helpText: '',
+            mods: '',
+            val: '',
+            attrs: {
+              name: 'field-name',
+              placeholder: 'Ваше имя',
+            }
+          })
+        .form-group.mb20
+          +field-text({
+            title: '',
+            hasJs: false,
+            isTextarea: false,
+            hasError: false,
+            helpText: '',
+            mods: '',
+            val: '',
+            attrs: {
+              name: 'field-phone',
+              placeholder: '+ 7-(___)-___-__-__',
+              class: 'j-mask-local'
+            }
+          })
+        .form-group.mb20
+          +field-checkbox({
+            title: 'Даю согласие на обработку персональных данных',
+            isLink: false,
+            mods: '',
+            attrs: {
+              name: 'field-checkbox',
+              checked: false,
+            }
+          })
+        button(type="button").btn.btn--block заказать звонок
+
+  .clear100
+  .modal__wrapper.--senks
+    button(type="button").modal__close
+    .modal__content
+      .modal__head Cпасибо
+      p Наш менеджер свяжется 
+        br
+        | с Вами в течении 5-10 минут
