--- a/_gulp/_scss/main.scss
+++ b/_gulp/_scss/main.scss
@@ -69,8 +69,8 @@ $container-max-widths: (
 @import "2-layout/_footer.scss";
 
 @import "../dist/js/libs/magnific-popup/magnific-popup.scss";
-// @import "3-modules/_slick.scss";
-// @import "3-modules/_slick-theme.scss";
+@import "../dist/js/libs/slick/slick.scss";
+@import "../dist/js/libs/slick/slick-theme.scss";
 @import "3-modules/_modules.scss";
 
 @import "4-utils/_clear.scss";
